--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="name">Krystal Maughan</h1>
       </header>
       <article>
-        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Monterrey, California. Far, far away from my <a href="https://en.wikipedia.org/wiki/Ithaca,_New_York" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events in Space (<a href="www.nasa.gov/mission_pages/station/main/">Hackaday.io</a>, <a href="https://github.com/blog/1805-patchwork-night" target="_blank">Patchwork</a>) and do travelling and dragon-boat racing.</p>
+        <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">open source</a> developer and designer living in Monterrey, California. Far, far away from my <a href="https://en.wikipedia.org/wiki/Ithaca,_New_York" target="_blank">East Coast US roots</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events in Space (<a href="www.nasa.gov/mission_pages/station/main/">Hackaday.io</a>, <a href="home.cern/" target="_blank">CERN</a>) and do travelling and dragon-boat racing.</p>
         <p> Previously I was an <a href="http://www.bostonredevelopmentauthority.org" target="_blank">lazy bum</a>, but the call of the wild open tech world would win me over.</p>
       </article>
 
