--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name"><bold>Krystal Maughan</bold></h1>
+        <h1 class="name"><bold><u>Krystal Maughan</bold></u></h1>
       </header>
       <article>
         <p>I'm an <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank">hermit, yodeller and </a> developer and designer living in Monterrey, California, far away from my <a href="https://en.wikipedia.org/wiki/Ithaca,_New_York" target="_blank">East Coast US roots and my Swiss-alp origins.</a>. I work at <a href="http://www.github.com/about" target="_blank">GitHub</a>, mentor at programming events in Space (<a href="www.nasa.gov/mission_pages/station/main/">Hackaday.io</a>, <a href="home.cern/" target="_blank">CERN</a>) and do travelling and dragon-boat racing.</p>
